--- a/examples/TcpSocket.Server/TcpSocket.Server.csproj
+++ b/examples/TcpSocket.Server/TcpSocket.Server.csproj
@@ -35,6 +35,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotNetty.Buffers, Version=0.6.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
